@startuml
note "Tous les attributs sont NOT NULL par défaut" as note


class Utilisateur{
  <primary> id : int
  email : str UNIQUE
  password : str (hash)
  nom : str
  prenom : str
  tel : str
  creation_date : datetime
  is_active : bool
}
note right
  constraint 0<=is_active<=1
end note

class Administrateur{
}

class Candidat{
}
class Recruteur{
}



class Type_Organisation{
  <primary> name : str
}

class Organisation{
  <primary> siret : int
  name : str
  adresse : str
}

class Etat{
  <primary> etat : text
}

class Offre{
  <primary> id : int
  expiration : datetime
  indications : text
}

class Fiche_de_poste{
  <primary> id : int
  intitule : str
  rythme_travail : float
  salaire_min : float
  salaire_max : float
  description : str
}

class Status_de_poste{
  <primary> id : int
  status : str
  responsable_hierarchique : str
}
class Type_metier{
  <primary> type : str
}

class Lieu{
  <primary> id : int
  numero_rue : int
  rue : str
  ville : str
  postcode : str 
}

class Candidature{
  <primary> id : int
  date_candidature : str

}

class Pieces_dossier{
  <primary> id : int
}

class Type_Piece_dossier{
  <primary> type : str
}

Pieces_dossier "*" -- "1" Type_Piece_dossier

Fiche_de_poste "*" -- "1" Type_metier

Candidature "*" -- "1" Candidat : "Modifier la candidature"
Candidature "*" -- "1" Offre
Candidature "1" -- "*" Pieces_dossier
Offre "1" -- "1" Etat
Administrateur -|> Utilisateur
Recruteur -|> Utilisateur
Candidat -|> Utilisateur
Organisation "1" -- "1" Type_Organisation
Organisation "1" -- "1" Fiche_de_poste
Fiche_de_poste "1" -- "*" Offre 
Fiche_de_poste "1" -- "1" Status_de_poste 
Fiche_de_poste "1" -- "1" Lieu 
Fiche_de_poste "*" -- "1 *" Recruteur : "Créer, modifier ou alonger la date de validité"


@enduml
